# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: budget.py  budget_ui.py  config.py  csv_file_management.py  database.sqlite  database_connection.py  index.py  initialize_database.py  show_budget.py  users.py  users_ui.py
src/tests/: budget_test.py  user_test.py
