[tool.poetry]
name = "budjettisovellus"
version = "0.1.0"
description = ""
authors = ["Crista <crista.holmstrom@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
autopep8 = "^2.0.2"
tkcalendar = "^1.6.1"
python-dotenv = "^1.0.0"
customtkinter = "^5.1.3"
ctkmessagebox = "^1.80"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
